@@ -102,6 +102,7 @@
 * SagePay: Add support for stored credentials [almalee24] #5007
 * Payeezy: Pull cardholer name from billing address [almalee24] #5006
 * HiPay: Add 3ds params [gasb150] #5012
+* Cecabank: Fix gateway scrub method [sinourain] #5009
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
